static/manifests/dtorders/catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dt-orders
      app.kubernetes.io/name: catalog-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "catalog-service"
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: "service"
        app.kubernetes.io/part-of: "dt-orders"
        app.kubernetes.io/managed-by: "helm"
        app.kubernetes.io/created-by: "dynatrace-demos"
      annotations:
        owner: Team Services
        chat-channel: dev-team-services

    spec:
      containers:
        - name: catalog
          image: dtdemos/dt-orders-catalog-service:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: catalog
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: catalog-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: catalog
  selector:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: catalog-service
  type: ClusterIP
