static/manifests/dtorders/deployall.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dt-orders
      app.kubernetes.io/name: customer-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: customer-service
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dt-orders
        app.kubernetes.io/managed-by: helm
        app.kubernetes.io/created-by: dynatrace-demos
      annotations:
        owner: Team Services
        chat-channel: dev-team-services
    spec:
      containers:
        - name: customer
          image: dtdemos/dt-orders-customer-service:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: cust-service
---
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: customer-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: customer
  selector:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: customer-service
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dt-orders
      app.kubernetes.io/name: catalog-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "catalog-service"
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: "service"
        app.kubernetes.io/part-of: "dt-orders"
        app.kubernetes.io/managed-by: "helm"
        app.kubernetes.io/created-by: "dynatrace-demos"
      annotations:
        owner: Team Services
        chat-channel: dev-team-services

    spec:
      containers:
        - name: catalog
          image: dtdemos/dt-orders-catalog-service:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: catalog
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: catalog-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: catalog
  selector:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: catalog-service
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dt-orders
      app.kubernetes.io/name: order-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: order-service
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: dt-orders
        app.kubernetes.io/managed-by: helm
        app.kubernetes.io/created-by: dynatrace-demos
      annotations:
        owner: Team Services
        chat-channel: dev-team-services
    spec:
      containers:
        - name: orders
          image: dtdemos/dt-orders-order-service:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: order-service
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: order-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: orders
  selector:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: order-service
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dt-orders
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/version: "1"
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: dt-orders
        app.kubernetes.io/managed-by: helm
        app.kubernetes.io/created-by: dynatrace-demos
      annotations:
        owner: Team Frontend
        chat-channel: dev-team-frontend
    spec:
      containers:
        - name: frontend
          image: dtdemos/dt-orders-frontend:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: frontend
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: frontend
  selector:
    app.kubernetes.io/part-of: dt-orders
    app.kubernetes.io/name: frontend
  type: ClusterIP
